fixed navigation layout and spacing

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,16 +1,16 @@
 .header {
+  height: 75px;
 }
 
 .nav {
-  height: 75px;
+  height: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-inline: 40px;
 }
 
 .navList {
-  display: flex;
+  display: none;
   justify-content: space-evenly;
   align-items: center;
   list-style-type: none;
@@ -18,14 +18,14 @@
 
 .navItem {
   flex: 1;
-  height: 90%;
-  text-align: center;
+  height: 50%;
   margin: 5px 10px;
 }
 
 .logoContainer {
   display: flex;
   align-items: center;
+  justify-content: flex-start;
 }
 
 .logo {
@@ -33,8 +33,28 @@
 }
 
 .buttons {
-  display: flex;
+  padding-right: 40px;
+  display: none;
   justify-content: flex-end;
   align-items: center;
   gap: 10px;
+}
+
+.mobileNavContainer {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-right: 40px;
+}
+
+/* Responsive Styles  */
+@media screen and (min-width: 950px) {
+  .mobileNavContainer {
+    display: none;
+  }
+
+  .navList,
+  .buttons {
+    display: flex;
+  }
 }
